# ssl-ct-lesion-seg

./: .gitignore  DATASET_SUPPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SSL_Project.ipynb  pyproject.toml  requirements.txt
configs/: base.yaml  ssl_consistency_only.yaml  ssl_meanteacher.yaml  ssl_meanteacher_targetaug.yaml  ssl_pseudolabel_only.yaml  ssl_targetaug_combined.yaml  ssl_targetaug_maxprob.yaml  supervised.yaml
docs/: BASELINE_RUNBOOK.md  EXPERIMENTAL_PROTOCOL.md  GAP_LIST.md  QUICKSTART.md
scripts/: demo_dataset.py  eval.py  make_splits.py  run_compare.py  sanity_viz.py  train.py
src/: __init__.py  data.py  dataset.py  losses.py  metrics.py  models.py  ssl.py  train_engine.py  transforms.py  utils.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_ssl.py  test_transforms.py
